# modelscan

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: bandit.yml  black.yml  build.yml  pip-audit.yml  publish.yml  test.yml
modelscan/: cli.py  modelscan.py  settings.py
modelscan/middlewares/: middleware.py
modelscan/scanners/h5/: scan.py
modelscan/scanners/keras/: scan.py
modelscan/scanners/saved_model/: scan.py
modelscan/tools/: archive.py  picklescanner.py  utils.py
tests/: test_modelscan.py  test_utils.py
